# django-email-service

./: .gitignore  LICENSE  README.rst  setup.cfg  setup.py
django_email/: abstract_models.py  admin.py  apps.py  constants.py  exceptions.py  models.py  services.py  tasks.py  urls.py  views.py
django_email/migrations/: 0001_initial.py  0002_auto_20200528_1257.py  0003_emaillog_from_name.py  0004_auto_20200715_1943.py  0005_auto_20200716_0820.py  0005_auto_20200716_1446.py  0006_auto_20200716_1518.py
django_email/providers/: __init__.py  abstract.py  mailjet.py
django_email/tests/: factories.py  test_mailjet.py  test_models.py  test_services.py  test_urls.py  test_views.py
